2001-12-31  Stephane Demurget  <demurgets@free.fr>

	* data/internal.properties: fixed baan properties.
	  Added all ada properties.

	* src/main_menubar_def.h,
	  src/lexer.h,
	  src/aneditor.cxx,
	  src/utilities.[ch]: added support for the Ada highlight style.

2001-12-31  Stephane Demurget  <demurgets@free.fr>

	* plugins/*/.cvsignore: updated.

2001-12-31  Stephane Demurget  <demurgets@free.fr>

	* src/syntax.h,
	  src/text_editor.c,
	  src/Makefile.am: removed the empty header syntax.h.

2001-12-31  Naba Kumar <kh_naba@users.sourceforge.net>

	* main_menubar.c:
	Stef's observation on the 'superfluous' hseparators in the recent
	files and projects is fully justified -- removed.
	
	* main_menubar_def.h:
	Changed "Plug Ins" to "Plugins" in the menu label.
	
	* configure.in, plugins/Makefile.am, plugins/class-gen/*:
	Added class-gen in the configure output and class-gen module.
	
	* data/internal.properties:
	Correct mis-spelled "jave" to "java".
	Added file.is.source for *.h, *.c, *.cpp properties.
	
	* global-tags/Makefile.am:
	"chmod +x create_global_tags.sh" before it is executed, because
	there is very high chance that it will be found "-x" and resulting
	in error

2001-12-31  Stephane Demurget  <demurgets@free.fr>

	Fixed a crash on Solaris reported by Holder Burde, thanks to him
	for the backtrace.

	* src/gnome_project.c: (create_new_project): if the user doesn't
	  select any icon, it doesn't have any extension and thus we can't
	  use it in printf on Solaris, since the %s modifier use strlen to
	  know the string length and then crash. On Linux, gcc checks the value
	  of the pointer to be NULL and write "(null)" if necessary. We can't
	  rely on that.

	* src/source.c: (source_write_desktop_entry): if there's no icon, we
	  don't need to have the directory icon but the generic one.

2001-12-30  Stephane Demurget  <demurgets@free.fr>

	Merged with latest (1.42) scintilla.

	Added: Support for the {load,save}.on.(de)activate properties.